completete, mb smt fix

--- a/src/App.css
+++ b/src/App.css
@@ -43,13 +43,13 @@ body {
   color: #000000;
 }
 
-.wrapper {
+/* .wrapper {
   max-width: 100%;
   width: 100vw;
   min-height: 100vh;
   overflow: hidden;
   background-color: #F1F1F1;
-}
+} */
 
 /* .container {
   max-width: 1260px;
@@ -276,7 +276,7 @@ body {
   color: #565EEF;
 } */
 
-.pop-new-card {
+/* .pop-new-card {
   display: block;
   width: 100%;
   min-width: 375px;
@@ -286,8 +286,8 @@ body {
   top: 0;
   left: 0;
   z-index: 6;
-}
-.pop-new-card__container {
+} */
+/* .pop-new-card__container {
   width: 100%;
   height: 100%;
   min-height: 100vh;
@@ -297,8 +297,8 @@ body {
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.4);
-}
-.pop-new-card__block {
+} */
+/* .pop-new-card__block {
   display: block;
   margin: 0 auto;
   background-color: #FFFFFF;
@@ -308,45 +308,45 @@ body {
   border-radius: 10px;
   border: 0.7px solid #D4DBE5;
   position: relative;
-}
-.pop-new-card__content {
+} */
+/* .pop-new-card__content {
   display: block;
   text-align: left;
-}
-.pop-new-card__ttl {
+} */
+/* .pop-new-card__ttl {
   color: #000;
   font-size: 20px;
   font-weight: 600;
   line-height: 24px;
   margin-bottom: 20px;
-}
-.pop-new-card__close {
+} */
+/* .pop-new-card__close {
   position: absolute;
   top: 20px;
   right: 30px;
   color: #94A6BE;
   cursor: pointer;
-}
-.pop-new-card__close:hover {
+} */
+/* .pop-new-card__close:hover {
   color: #000000;
-}
-.pop-new-card__wrap {
+} */
+/* .pop-new-card__wrap {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-}
-.pop-new-card__form {
+} */
+/* .pop-new-card__form {
   max-width: 370px;
   width: 100%;
   display: block;
   margin-bottom: 20px;
-}
+} */
 
-.form-new__block {
+/* .form-new__block {
   display: flex;
   flex-direction: column;
-}
-.form-new__input, .form-new__area {
+} */
+/* .form-new__input, .form-new__area {
   width: 100%;
   outline: none;
   padding: 14px;
@@ -356,30 +356,30 @@ body {
   font-size: 14px;
   line-height: 1;
   letter-spacing: -0.14px;
-}
-.form-new__input::-moz-placeholder, .form-new__area::-moz-placeholder {
+} */
+/* .form-new__input::-moz-placeholder, .form-new__area::-moz-placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 1px;
   color: #94A6BE;
   letter-spacing: -0.14px;
-}
-.form-new__input::placeholder, .form-new__area::placeholder {
+} */
+/* .form-new__input::placeholder, .form-new__area::placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 1px;
   color: #94A6BE;
   letter-spacing: -0.14px;
-}
-.form-new__input {
+} */
+/* .form-new__input {
   margin: 20px 0;
-}
-.form-new__area {
+} */
+/* .form-new__area {
   max-width: 370px;
   margin-top: 14px;
   height: 200px;
-}
-.form-new__create {
+} */
+/* .form-new__create {
   width: 132px;
   height: 30px;
   background-color: #565EEF;
@@ -391,23 +391,23 @@ body {
   line-height: 1;
   color: #FFFFFF;
   float: right;
-}
+} */
 
-.subttl {
+/* .subttl {
   color: #000;
   font-size: 14px;
   font-weight: 600;
   line-height: 1;
-}
+} */
 
-.calendar {
+/* .calendar {
   width: 182px;
   margin-bottom: 20px;
-}
-.calendar__ttl {
+} */
+/* .calendar__ttl {
   margin-bottom: 14px;
   padding: 0 7px;
-}
+} */
 .calendar__p {
   color: #94A6BE;
   font-size: 10px;
@@ -416,40 +416,40 @@ body {
 .calendar__p span {
   color: #000000;
 }
-.calendar__block {
+/* .calendar__block {
   display: block;
-}
-.calendar__month {
+} */
+/* .calendar__month {
   color: #94A6BE;
   font-size: 14px;
   line-height: 25px;
   font-weight: 600;
-}
-.calendar__content {
+} */
+/* .calendar__content {
   margin-bottom: 12px;
-}
-.calendar__days-names {
+} */
+/* .calendar__days-names {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-between;
   margin: 7px 0;
   padding: 0 7px;
-}
-.calendar__day-name {
+} */
+/* .calendar__day-name {
   color: #94A6BE;
   font-size: 10px;
   font-weight: 500;
   line-height: normal;
   letter-spacing: -0.2px;
-}
-.calendar__cells {
+} */
+/* .calendar__cells {
   width: 182px;
   height: 126px;
   display: flex;
   flex-wrap: wrap;
-}
-.calendar__cell {
+} */
+/* .calendar__cell {
   width: 22px;
   height: 22px;
   margin: 2px;
@@ -463,53 +463,53 @@ body {
   line-height: 1;
   letter-spacing: -0.2px;
   cursor: pointer;
-}
-.calendar__nav {
+} */
+/* .calendar__nav {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 14px;
   padding: 0 7px;
-}
+} */
 .calendar__period {
   padding: 0 7px;
 }
 
-.nav__actions {
+/* .nav__actions {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-.nav__action {
+} */
+/* .nav__action {
   width: 18px;
   height: 25px;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.nav__action svg {
+} */
+/* .nav__action svg {
   fill: #94A6BE;
-}
+} */
 
-._other-month {
+/* ._other-month {
   opacity: 0;
-}
+} */
 
-._cell-day:hover {
+/* ._cell-day:hover {
   color: #94A6BE;
   background-color: #EAEEF6;
-}
+} */
 
 ._active-day {
   background-color: #94A6BE;
   color: #FFFFFF;
 }
 
-._current {
+/* ._current {
   font-weight: 700;
-}
+} */
 
 .categories {
   margin-bottom: 20px;
@@ -792,19 +792,19 @@ body {
   z-index: 2;
 } */
 
-.main {
+/* .main {
   width: 100%;
   background-color: #EAEEF6;
-}
-.main__block {
+} */
+/* .main__block {
   width: 100%;
   margin: 0 auto;
   padding: 25px 0 49px;
-}
-.main__content {
+} */
+/* .main__content {
   width: 100%;
   display: flex;
-}
+} */
 /* .main__column {
   width: 20%;
   margin: 0 auto;
